--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-sass": "3.3.5"
+    "bootstrap-sass": "3.3.5",
+    "font-awesome": "^4.6.3"
   },
   "resolutions": {
     "bootstrap-sass": "3.3.5"
